--- a/app/templates/pages/about.html
+++ b/app/templates/pages/about.html
@@ -3,6 +3,8 @@
 {% block title %}О нас{% endblock %}
 
 {% block content %}
-  <h2>О нас</h2>
-  <p>Это страница содержит информацию о разработчике.</p>
+  <div class="container">
+    <h2 class="display-4">О нас</h2>
+    <p class="lead">Это страница содержит информацию о разработчике.</p>
+  </div>
 {% endblock %}
