--- a/app/templates/components/footer.html
+++ b/app/templates/components/footer.html
@@ -1,3 +1,5 @@
-<footer>
-  <p>&copy; {{ current_year }} MyCorp ChatBot App</p>
+<footer class="bg-body-tertiary text-center text-lg-start">
+  <div class="text-center p-3">
+    <p>&copy; {{ current_year }} MyCorp ChatBot App</p>
+  </div>
 </footer>
