--- a/app/templates/components/header.html
+++ b/app/templates/components/header.html
@@ -1,13 +1,29 @@
 <header>
-  <h1>Корпортивный чат-бот</h1>
-  <nav>
-    <a href="{{ url_for('dialogue.all') }}">Главная</a>
-    <a href="{{ url_for('dialogue.about') }}">О разработчике</a>
-    {% if current_user.is_authenticated %}
-      <a href="{{ url_for('user.logout') }}">Выйти</a>
-    {% else %}
-      <a href="{{ url_for('user.login') }}">Войти</a>
-      <a href="{{ url_for('user.register') }}">Зарегистрироваться</a>
-    {% endif %}
+  <nav class="navbar navbar-expand-lg bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Корпоративный чат-бот</a>
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('dialogue.all') }}">Главная</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('dialogue.about') }}">О разработчике</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav">
+        {% if current_user.is_authenticated %}
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('user.logout') }}">Выйти</a>
+        </li>
+        {% else %}
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('user.login') }}">Войти</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('user.register') }}">Зарегистрироваться</a>
+        </li>
+        {% endif %}
+      </ul>
+    </div>
   </nav>
 </header>
