--- a/app/templates/pages/register.html
+++ b/app/templates/pages/register.html
@@ -3,11 +3,19 @@
 {% block title %}Регистрация{% endblock %}
 
 {% block content %}
-  <h1>Регистрация</h1>
-  <form method="POST">
-    <input type="text" name="username" placeholder="Имя пользователя" required>
-    <input type="password" name="password" placeholder="Пароль" required>
-    <button type="submit">Зарегистрироваться</button>
-  </form>
-  <p>Уже есть аккаунт? <a href="{{ url_for('user.login') }}">Войти</a></p>
+  <div class="container">
+    <h1>Регистрация</h1>
+    <form method="POST">
+      <div class="mb-3">
+        <label for="username">Имя пользователя</label>
+        <input type="text" class="form-control" id="username" name="username" placeholder="Имя пользователя" required>
+      </div>
+      <div class="mb-3">
+        <label for="password">Пароль</label>
+        <input type="password" class="form-control" id="password" name="password" placeholder="Пароль" required>
+      </div>
+      <button type="submit" class="btn btn-primary">Зарегистрироваться</button>
+    </form>
+    <p class="text-muted">Уже есть аккаунт? <a href="{{ url_for('user.login') }}">Войти</a></p>
+  </div>
 {% endblock %}
