--- a/app/templates/components/header.html
+++ b/app/templates/components/header.html
@@ -4,10 +4,10 @@
       <a class="navbar-brand" href="#">Корпоративный чат-бот</a>
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('dialogue.all') }}">Главная</a>
+          <a class="nav-link {% if request.path == url_for('dialogue.all') %}active{% endif %}" href="{{ url_for('dialogue.all') }}">Главная</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('dialogue.about') }}">О разработчике</a>
+          <a class="nav-link {% if request.path == url_for('dialogue.about') %}active{% endif %}" href="{{ url_for('dialogue.about') }}">О разработчике</a>
         </li>
       </ul>
       <ul class="navbar-nav">
@@ -15,15 +15,19 @@
         <li class="nav-item">
           <a class="nav-link" href="{{ url_for('user.logout') }}">Выйти</a>
         </li>
+        <li>
+          <a class="nav-link" href="#">({{ current_user.username }})</a>
+        </li>
         {% else %}
         <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('user.login') }}">Войти</a>
+          <a class="nav-link {% if request.path == url_for('user.login') %}active{% endif %}" href="{{ url_for('user.login') }}">Войти</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('user.register') }}">Зарегистрироваться</a>
+          <a class="nav-link {% if request.path == url_for('user.register') %}active{% endif %}" href="{{ url_for('user.register') }}">Зарегистрироваться</a>
         </li>
         {% endif %}
       </ul>
     </div>
   </nav>
 </header>
+
